--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <title>Vice City | Acceuil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="Vice City est un serveur GTA RP ouvert à tous, sur Fivem.">
+        <meta name="description" content="En cours de dev...">
       <meta name="author" content="COSSART">
       <meta property="og:type" content="Vice City">
       <meta property="og:url" content="www.vicecity/acceuil.fr">
       <meta property="og:title" content="Vice City | Acceuil">
-      <meta property="og:description" content="Vice City est un serveur GTA RP ouvert à tous, sur Fivem.">
+      <meta property="og:description" content="En cours de dev...">
       <meta property="og:image" content="img/logo.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <script src="https://kit.fontawesome.com/a4cacc32f2.js" crossorigin="anonymous"></script>
@@ -138,35 +138,6 @@
                 </div>
             </div>
         </div>
-<div id="root">
-  <div id="topnav" class="topnav">
-    <a id="home_link" class="topnav_link" href="/">HOME</a>
-
-    <!-- Classic Menu -->
-    <nav role="navigation" id="topnav_menu">
-      <a class="topnav_link" href="/about">ABOUT</a>
-      <a class="topnav_link" href="/contact-us">CONTACT</a>
-    </nav>
-
-    <a id="topnav_hamburger_icon" href="javascript:void(0);" onclick="showResponsiveMenu()">
-      <!-- Some spans to act as a hamburger -->
-      <span></span>
-      <span></span>
-      <span></span>
-    </a>
-
-    <!-- Responsive Menu -->
-    <nav role="navigation" id="topnav_responsive_menu">
-      <ul>
-        <li><a href="/">HOME</a></li>
-        <li><a href="/about">ABOUT</a></li>
-        <li><a href="/contact-us">CONTACT</a></li>
-        <li><a href="/privacy-policy">PRIVACY POLICY</a></li>
-        <li><a href="/terms-and-conditions">TERMS AND CONDITIONS</a></li>
-      </ul>
-    </nav>
-  </div>
-</div>
 
         <footer>
             <div class="container">
