--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Vice City | Acceuil</title>
+        <title>Au Domaine de Réa</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="En cours de dev...">
       <meta name="author" content="COSSART">
-      <meta property="og:type" content="Vice City">
+      <meta property="og:type" content="Au Domaine de Réa">
       <meta property="og:url" content="www.vicecity/acceuil.fr">
-      <meta property="og:title" content="Vice City | Acceuil">
+      <meta property="og:title" content="Au Domaine de Réa">
       <meta property="og:description" content="En cours de dev...">
       <meta property="og:image" content="img/logo.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,10 +28,7 @@
         <div class="header">
             <div class="header__texture"></div>
             <div class="container">
-                <div class="header__navbar">
-                    <div class="header__navbar--logo">
-                        <img alt="logo text" width="120" height="120" src="https://cdn.discordapp.com/attachments/545177051364065287/867061293504266290/logo.png" class="header__navbar--logo-title">
-                    </div>
+                <div class="header__navbar">               
                     <div class="header__navbar--menu">
                         <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> Accueil</a>
                         <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-shopping-cart"></i> Boutique</a>
