--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <div class="header__navbar">               
                     <div class="header__navbar--menu">
                         <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> Accueil</a>
-                        <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-shopping-cart"></i> Boutique</a>
-                        <a href="reglementvcity.pdf" target="_blank" class="header__navbar--menu-link"><i class="fas fa-bookmark"></i> Règlement</a>
-                        <a href="https://discord.gg/R3pVV52G" target="_blank" class="header__navbar--menu-link"><i class="fab fa-discord"></i> Discord</a>
+                        <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-shopping-cart"></i> L'élevage</a>
+                        <a href="reglementvcity.pdf" target="_blank" class="header__navbar--menu-link"><i class="fas fa-bookmark"></i> Nos Chiots</a>
+                        <a href="https://discord.gg/R3pVV52G" target="_blank" class="header__navbar--menu-link"><i class="fab fa-discord"></i> Livre d'Or</a>
                         <a href="#presentation" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Présentation</a>
                     </div>
                     <div class="header__navbar--toggle">
