--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <div class="header__navbar--menu">
                         <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> Accueil</a>
                         <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-shopping-cart"></i> L'élevage</a>
-                        <a href="reglementvcity.pdf" target="_blank" class="header__navbar--menu-link"><i class="fas fa-bookmark"></i> Nos Chiots</a>
-                        <a href="https://discord.gg/R3pVV52G" target="_blank" class="header__navbar--menu-link"><i class="fab fa-discord"></i> Livre d'Or</a>
-                        <a href="#presentation" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Présentation</a>
+                        <a href="chiots.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-bookmark"></i> Nos Chiots</a>
+                        <a href="avis.html" target="_blank" class="header__navbar--menu-link"><i class="fab fa-discord"></i> Livre d'Or</a>
+                        <a href="contact.html" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Nous contacter</a>
                     </div>
                     <div class="header__navbar--toggle">
                         <span class="header__navbar--toggle-icons"></span>
@@ -123,7 +123,7 @@
             <div class="container">
                 <div class="footer">
                     <p>Nos réseaux sociaux :</p>
-                    <p><img src="https://cdn.discordapp.com/attachments/867033756451864606/867036282734379028/Instagram.png" width="3%"><img src="https://cdn.discordapp.com/attachments/867033756451864606/867036547218800660/Twitter.png" width="3%"></p>
+                    <p><img src="https://cdn.discordapp.com/attachments/867033756451864606/867036282734379028/Instagram.png" width="20%"><img src="https://cdn.discordapp.com/attachments/867033756451864606/867036547218800660/Twitter.png" width="20%"></p>
                 </div>
             </div>
         </footer>
