--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <meta property="og:url" content="www.vicecity/acceuil.fr">
       <meta property="og:title" content="Au Domaine de Réa">
       <meta property="og:description" content="En cours de dev...">
-      <meta property="og:image" content="img/logo.png">
+      <meta property="og:image" content="https://cdn.discordapp.com/attachments/557305648006823956/918777956124463104/Margaret_-_Logo.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <script src="https://kit.fontawesome.com/a4cacc32f2.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="shortcut icon" href="img/logo.png">
+        <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/557305648006823956/918777956124463104/Margaret_-_Logo.png">
         <!-- CSS -->
 
         <link rel="stylesheet" href="css/base.css">
