--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     </head>
     <body>
+        <div class="burger">
+            <span></span>
+        </div>
+        
         <div class="header">
             <div class="header__texture"></div>
             <div class="container">
