--- a/index.html
+++ b/index.html
@@ -25,19 +25,15 @@
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div class="burger">
-            <span></span>
-        </div>
-        
         <div class="header">
             <div class="header__texture"></div>
             <div class="container">
                 <div class="header__navbar">               
                     <div class="header__navbar--menu">
-                        <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> Accueil</a>
-                        <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-shopping-cart"></i> L'élevage</a>
-                        <a href="chiots.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-bookmark"></i> Nos Chiots</a>
-                        <a href="avis.html" target="_blank" class="header__navbar--menu-link"><i class="fab fa-discord"></i> Livre d'Or</a>
+                        <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-angle-right"></i> Accueil</a>
+                        <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> L'élevage</a>
+                        <a href="chiots.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-paw"></i> Nos Chiots</a>
+                        <a href="avis.html" target="_blank" class="header__navbar--menu-link"><i class="fab fa-book"></i> Livre d'Or</a>
                         <a href="contact.html" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Nous contacter</a>
                     </div>
                     <div class="header__navbar--toggle">
