--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="header__navbar">               
                     <div class="header__navbar--menu">
                         <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-angle-right"></i> Accueil</a>
-                        <a href="boutique.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> L'élevage</a>
+                        <a href="elevage.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> L'élevage</a>
                         <a href="chiots.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-paw"></i> Nos Chiots</a>
                         <a href="avis.html" target="_blank" class="header__navbar--menu-link"><i class="fab fa-book"></i> Livre d'Or</a>
                         <a href="contact.html" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Nous contacter</a>
