--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="elevage.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> L'élevage</a>
                         <a href="chiots.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-paw"></i> Nos Chiots</a>
                         <a href="avis.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-book"></i> Livre d'Or</a>
-                        <a href="contact.html" class="header__navbar--menu-link"><i class="fas fa-vcard-o"></i>  Nous contacter</a>
+                        <a href="contact.html" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Nous contacter</a>
                     </div>
                     <div class="header__navbar--toggle">
                         <span class="header__navbar--toggle-icons"></span>
@@ -54,8 +54,8 @@
                     <div class="col-sm-6 col-md-8">
                         <table>
                             <td>
-                                <p style="float: right"><h1>Bienvenue sur Vice City !</h1>
-                                <h3 class="questions__title">Tu cherches un bon serveur ? Vice City est fait pour toi !</h3>
+                                <p style="float: right"><h1>Bienvenue au Domaine de Réa !</h1>
+                                <h3 class="questions__title">BLABLABLA...</h3>
                                 Nous vous proposons un serveur fiable, complet et optimisé. Quand nous avons créé le serveur, nous avons eu comme but d'en<br> créer un qui se démarque des autres serveurs que vous pouvez rencontrer. Le serveur est en développement constant, pour <br>découvrir plein de nouvelle fonctionnalité et amélioré votre expérience sur Vice City.</p>
                             </td>
                             <td>
