--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <div class="header__navbar--menu">
                         <a href="index.html" class="header__navbar--menu-link"><i class="fas fa-angle-right"></i> Accueil</a>
                         <a href="elevage.html" class="header__navbar--menu-link"><i class="fas fa-home"></i> L'élevage</a>
-                        <a href="chiots.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-paw"></i> Nos Chiots</a>
-                        <a href="avis.html" target="_blank" class="header__navbar--menu-link"><i class="fas fa-book"></i> Livre d'Or</a>
+                        <a href="chiots.html" class="header__navbar--menu-link"><i class="fas fa-paw"></i> Nos Chiots</a>
+                        <a href="avis.html" class="header__navbar--menu-link"><i class="fas fa-book"></i> Livre d'Or</a>
                         <a href="contact.html" class="header__navbar--menu-link"><i class="fa fa-vcard-o"></i>  Nous contacter</a>
                     </div>
                     <div class="header__navbar--toggle">
