--- a/chiots.html
+++ b/chiots.html
@@ -25,7 +25,16 @@
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     </head>
     <body>
-
+        <nav class= "sidebar">
+            <div class="text">Side Menu</div>
+            <ul>
+                <li><a href="#">Dashboard</a></li>
+                <li>
+                    <a href="#">Features</a>
+                </li>
+            </ul>
+        </nav>
+        
         <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
