--- a/chiots.html
+++ b/chiots.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     </head>
     <body>
