--- a/chiots.html
+++ b/chiots.html
@@ -11,16 +11,14 @@
         <nav class= "sidebar">
             <div class="text">Side Menu</div>
             <ul>
-                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Acceuil</a></li>
                 <li>
-                    <a href="#">Features</a>
+                    <a href="#">L'élevage</a>
                 </li>
+                <li><a href="#">Nos Chiots</a></li>
+                <li><a href="#">Livre d'Or</a></li>
+                <li><a href="#">Nous contacter/a></li>
             </ul>
         </nav>
-        <script
-        src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"></script>
-        <script src="js/app.js"></script>
-    </body>
+    </body>    
 </html>
