--- a/chiots.html
+++ b/chiots.html
@@ -17,7 +17,7 @@
                 </li>
                 <li><a href="#">Nos Chiots</a></li>
                 <li><a href="#">Livre d'Or</a></li>
-                <li><a href="#">Nous contacter/a></li>
+                <li><a href="#">Nous contacter</a></li>
             </ul>
         </nav>
     </body>    
