--- a/chiots.html
+++ b/chiots.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Au Domaine de Réa</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"</script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>                                                         
     </head>
