--- a/avis.html
+++ b/avis.html
@@ -9,10 +9,10 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
    <body>
-      <div class="btn click">
+      <div class="btn">
          <span class="fas fa-bars"></span>
       </div>
-      <nav class="sidebar show">
+      <nav class="sidebar">
          
          <ul>
             <li class="active"><a href="#">Dashboard</a></li>
@@ -37,8 +37,5 @@
             HTML CSS &amp; Javascript (Full Tutorial)
          </p>
       </div>
-      
-   
-
    </body>
 </html>
