--- a/avis.html
+++ b/avis.html
@@ -13,34 +13,14 @@
          <span class="fas fa-bars"></span>
       </div>
       <nav class="sidebar">
-         <div class="text">
-            Side Menu
          </div>
-         <ul>
-            <li class="active"><a href="#">Dashboard</a></li>
-            <li>
-               <a href="#" class="feat-btn">Features
-               <span class="fas fa-caret-down first"></span>
-               </a>
-               <ul class="feat-show">
-                  <li><a href="#">Pages</a></li>
-                  <li><a href="#">Elements</a></li>
-               </ul>
-            </li>
-            <li>
-               <a href="#" class="serv-btn">Services
-               <span class="fas fa-caret-down second"></span>
-               </a>
-               <ul class="serv-show">
-                  <li><a href="#">App Design</a></li>
-                  <li><a href="#">Web Design</a></li>
-               </ul>
-            </li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Shortcuts</a></li>
-            <li><a href="#">Feedback</a></li>
-         </ul>
+            <ul>
+                <li><a href="#"><i class="fas fa-angle-right" aria-hidden="true"></i> Accueil</a></li>
+                <li><a href="#"><i class="fas fa-home" aria-hidden="true"></i> L'élevage</a></li>
+                <li><a href="#"><i class="fas fa-paw" aria-hidden="true"></i> Nos Chiots</a></li>
+                <li><a href="#"><i class="fas fa-book" aria-hidden="true"></i> Livre d'Or</a></li>
+                <li><a href="#"><i class="fas fa-address-card" aria-hidden="true"></i> Nous contacter</a></li>
+            </ul>
       </nav>
       <div class="content">
          <div class="header">
