--- a/avis.html
+++ b/avis.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
+<!-- Développé par Jérôme B -->
+<html lang="fr" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Sidebar Menu with sub-menu | CodingNepal</title>
+      <title>Au Domaine de Réa</title>
       <link rel="stylesheet" href="css/test.css">
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
