--- a/avis.html
+++ b/avis.html
@@ -9,6 +9,8 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
    <body>
+      <div class="header">
+            <div class="header__texture"></div>
       <div class="btn">
          <span class="fas fa-bars"></span>
       </div>
@@ -47,5 +49,11 @@
              $(this).addClass("active").siblings().removeClass("active");
            });
       </script>
+    <div class="wave">
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+        <div class="wave wave4"></div>
+    </div>
    </body>
 </html>
