--- a/avis.html
+++ b/avis.html
@@ -11,6 +11,7 @@
    <body>
       <div class="header">
             <div class="header__texture"></div>
+      </div>
       <div class="btn">
          <span class="fas fa-bars"></span>
       </div>
