--- a/avis.html
+++ b/avis.html
@@ -48,5 +48,8 @@
         <div class="wave wave3"></div>
         <div class="wave wave4"></div>
     </div>
+   <div class="logo">
+      <img src="https://cdn.discordapp.com/attachments/557305648006823956/923132594239991888/Logo_Margaret.png">
+   </div>
    </body>
 </html>
