--- a/avis.html
+++ b/avis.html
@@ -21,7 +21,7 @@
                 <li><a href="#"><i class="fas fa-angle-right" aria-hidden="true"></i> Accueil</a></li>
                 <li><a href="#"><i class="fas fa-home" aria-hidden="true"></i> L'élevage</a></li>
                 <li><a href="#"><i class="fas fa-paw" aria-hidden="true"></i> Nos Chiots</a></li>
-                <li><a href="#"><i class="fas fa-book" aria-hidden="true"></i> Livre d'Or</a></li>
+                <li><a href="avis.html"><i class="fas fa-book" aria-hidden="true"></i> Livre d'Or</a></li>
                 <li><a href="#"><i class="fas fa-address-card" aria-hidden="true"></i> Nous contacter</a></li>
             </ul>
       </nav>
