--- a/avis.html
+++ b/avis.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="css/test.css">
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/557305648006823956/923132594239991888/Logo_Margaret.png">
    </head>
    <body>
       <div class="header">
