--- a/elevage.html
+++ b/elevage.html
@@ -4,6 +4,7 @@
    <head>
       <meta charset="utf-8">
       <title>Au Domaine de Réa</title>
+      <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/footer.css">
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
