--- a/elevage.html
+++ b/elevage.html
@@ -13,12 +13,11 @@
    <body>
       <div class="header">
             <div class="header__texture"></div>
-      </div>
       <div class="btn">
          <span class="fas fa-bars"></span>
       </div>
       <nav class="sidebar">
-         </div>
+         
             <ul>
                 <li><a href="accueil.html"><i class="fas fa-angle-right" aria-hidden="true"></i> Accueil</a></li>
                 <li><a href="elevage.html"><i class="fas fa-home" aria-hidden="true"></i> L'élevage</a></li>
@@ -53,6 +52,25 @@
    <div class="logo">
       <img src="https://cdn.discordapp.com/attachments/557305648006823956/923132594239991888/Logo_Margaret.png">
    </div>
+      </div>
+    <div class="main-content-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-8">
+                        <table>
+                            <tbody><tr><td>
+                                <p style="float: right"></p><h1>Bienvenue au Domaine de Réa</h1>
+<br><br>Situé en Normandie, à 20 minutes de Dieppe et 1 heure de Rouen, ce petit élevage familial de bichon maltais et havanais sera le parfait endroit pour trouver votre futur compagnon de vie.
+<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
+<br><br>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.<p></p>
+                            </td>
+                            
+                        </tr></tbody></table>
+                    </div>
+                </div>
+            </div>
+        </div>
    <footer>
       <div class="bottom">
         <center>
