--- a/chiots.html
+++ b/chiots.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8">
       <title>Au Domaine de Réa</title>
-      <link rel="stylesheet" href="css/test.css">
+      <link rel="stylesheet" href="css/chiots.css">
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
       <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/557305648006823956/923132594239991888/Logo_Margaret.png">
