--- a/chiots.html
+++ b/chiots.html
@@ -10,14 +10,15 @@
       <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/557305648006823956/923132594239991888/Logo_Margaret.png">
    </head>
    <body>
-      <nav>
-         <ul>
-            <li><a href="*">Home</a></li>
-            <li><a href="*">Home</a></li>
-            <li><a href="*">Home</a></li>
-            <li><a href="*">Home</a></li>
-            <li><a href="*">Home</a></li>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+         <ul class="nav navbar-nav">
+            <li><a id="len1" class="hoverable" href="#">Home</a></li>
+            <li><a id="len2" class="hoverable" href="#">About</a></li>
+            <li><a id="len3" class="hoverable" href="#">Portfolio</a></li>
+            <li><a id="len4" class="hoverable" href="#">Contact</a></li>
          </ul>
-      </nav>  
-</body>
+      </div>
+    </nav>
+   </body>
 </html>
